[project]
name = "data-node-network"
description = "A_short_description"

dynamic = ["version"]

readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {email = "matthew@davidson.engineering"},
  {name = "Matthew Davidson"}
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
   "pyyaml >= 6.0.1",
   "prometheus_client >= 0.20.0",
   "tomli >= 2.0.1; python_version <= '3.11'",
]

# If a module, then use fetch version from src/module_name/__init__.py
[tool.setuptools.dynamic]
version = {attr = "data_node_network.__version__"}

[project.optional-dependencies]
test = [
  "pytest >= 8.0.0",
]

[project.urls]
# homepage = "https://example.com"
# documentation = "https://readthedocs.org"
repository = "https://github.com/davidson-engineering/data-node-network.git"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

# [project.scripts]
# spam-cli = "spam:main_cli"

# [project.gui-scripts]
# spam-gui = "spam:main_gui"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"
